# heisenheap

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: CompilerFlags.cmake  Sanitizers.cmake
examples/: CMakeLists.txt
include/heisenheap/: allocation.h  compiler.h  error.h  export.h  options.h  platform.h  source_location.h  span.h
src/: allocator.cpp  error.cpp  options.cpp
tests/: CMakeLists.txt  test_allocation.cpp  test_error.cpp  test_options.cpp  test_source_location.cpp  test_span.cpp
